[package]
name = "dockpack"
version = "0.1.0"
edition = "2021"

[dependencies]
core-dockpack = { path = "../core-dockpack" }
clap = { version = "4.0", features = ["derive"] }


[[bin]]
name = "dockpack"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]


# [target.'cfg(bin)'.dependencies]
# clap = { version = "4.0", features = ["derive"] }
